--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.34.0</version>
         </dependency>
+        <dependency>
+            <groupId>ru.geekbrains</groupId>
+            <artifactId>command</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
